# ArduinoSimulator

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  README.md
include/core/: Arduino.h  ArduinoPin.h  Component.h  ElectricalComponent.h  LED.h  Resistor.h  Wire.h
include/simulation/: Circuit.h  CircuitSimulator.h  MatrixSolver.h  Node.h
include/ui/: ArduinoGraphicsItem.h  CircuitCanvas.h  ComponentGraphicsItem.h  LEDGraphicsItem.h  MainWindow.h  WireGraphicsItem.h
resources/: resources.qrc
src/: main.cpp  test_led_wire_main.cpp
src/core/: Arduino.cpp  ArduinoPin.cpp  Component.cpp  ElectricalComponent.cpp  LED.cpp  Resistor.cpp  Wire.cpp
src/simulation/: Circuit.cpp  CircuitSimulator.cpp  MatrixSolver.cpp  Node.cpp
src/ui/: ArduinoGraphicsItem.cpp  CircuitCanvas.cpp  ComponentGraphicsItem.cpp  LEDGraphicsItem.cpp  MainWindow.cpp  WireGraphicsItem.cpp
